<resources>
    <string name="app_name">blackpass</string>
    <string name="begin_button">시작하기</string>
    <string name="begin_button2">Google로 시작하기</string>
    <string name="input_email">이메일을 입력해주세요.</string>
    <string name="sign_message">로그인 또는 회원가입을 진행합니다.</string>
    <string name="ragistration">등록</string>
    <string name="need_ragistration">블랙박스 기기를 등록하세요</string>
    <string name="next">다음으로</string>
    <string name="sign_in">로그인하기</string>
    <string name="input_password">비밀번호를 입력해주세요.</string>
    <string name="sign_message2">입력하신 이메일로 로그인을 진행합니다.</string>
    <string name="sign_message3">입력하신 이메일로 회원가입을 진행합니다.</string>
    <string name="condition_message">비밀번호는 영문, 숫자, 특수문자를 포함해 8자리 이상 입력해주세요.</string>
    <string name="device_name">디바이스 이름</string>
    <string name="name_of_ragist">등록 날짜 : </string>
    <string name="name_of_expire">유효 기간 : </string>
    <string name="date">xxxx년 xx월 xx일</string>
    <string name="search_file">파일별</string>
    <string name="search_date">일별</string>
    <string name="time">xx시 xx분</string>
    <string name="device_lock">디바이스가 연결되었습니다</string>'
    <string name="user_name">사용자 이름</string>
    <string name="user_info">개인정보</string>
    <string name="example_email">blackpass@gmail.com</string>
    <string name="example_userinfo">010101-3******</string>
</resources>