<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button
        android:id="@+id/left_arrow"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:background="@drawable/left_arrow"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>
    <TextView
        android:id="@+id/input_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_password"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:fontFamily="@font/gmarketsansttfbold"
        android:layout_marginTop="67dp"
        android:layout_marginLeft="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        ></TextView>
    <TextView
        android:id="@+id/sign_message"
        android:text="@string/sign_message2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#8e8e8e"
        android:textSize="13dp"
        android:fontFamily="@font/gmarketsansttfmedium"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        ></TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_password"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/sign_message"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="128dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            app:layout_constraintLeft_toLeftOf="parent"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/condition_message"
        android:fontFamily="@font/gmarketsansttfmedium"
        android:textSize="9dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        ></TextView>
    <Button
        android:id="@+id/button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/next_button"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:fontFamily="@font/gmarketsansttfbold"
        android:textSize="13dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        ></Button>
</androidx.constraintlayout.widget.ConstraintLayout>