<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/input_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_email"
        android:textSize="30dp"
        android:fontFamily="@font/gmarketsansttfbold"
        android:textColor="@color/black"
        android:layout_marginTop="67dp"
        android:layout_marginLeft="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>
    <TextView
        android:id="@+id/sign_message"
        android:text="@string/sign_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#8e8e8e"
        android:textSize="13dp"
        android:fontFamily="@font/gmarketsansttfmedium"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email"
        ></TextView>
    <EditText
        android:id="@+id/edit_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="blackpass@welcome.com"
        android:textSize="15dp"
        android:textColorHint="#8e8e8e"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="128dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_message"
        ></EditText>
    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:background="@drawable/next_button"
        android:textColor="@color/white"
        android:layout_marginTop="348dp"
        android:fontFamily="@font/gmarketsansttfbold"
        android:textSize="13dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        ></Button>
    <Button
        android:id="@+id/left_arrow"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:background="@drawable/left_arrow"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        ></Button>
</androidx.constraintlayout.widget.ConstraintLayout>