<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:cardBackgroundColor="#000000"
            app:cardCornerRadius="18dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="12dp"
                app:cardElevation="2dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cardview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/profile2"
                        app:layout_constraintTop_toBottomOf="@+id/cardview"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginTop="50dp"/>
                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/profile"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:fontFamily="@font/gmarketsansttfmedium"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/user_name"></TextView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/bar"
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:background="@drawable/bar"
                        android:backgroundTint="#F6F7F8"
                        android:layout_marginTop="15dp"
                        app:layout_constraintTop_toBottomOf="@+id/username"></androidx.cardview.widget.CardView>
                    <TextView
                        android:id="@+id/userinfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_info"
                        android:fontFamily="@font/gmarketsansttfmedium"
                        android:textSize="20dp"
                        android:layout_marginTop="13dp"
                        android:layout_marginLeft="18dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@+id/bar"></TextView>
                    <Button
                        android:layout_width="26dp"
                        android:layout_height="21dp"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginTop="14dp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@+id/bar"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/right_arrow"></Button>
                    <ImageView
                        android:id="@+id/email"
                        android:layout_width="34dp"
                        android:layout_height="24dp"
                        android:background="@drawable/email"
                        app:layout_constraintTop_toBottomOf="@+id/userinfo"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="20dp"></ImageView>
                    <TextView
                        android:id="@+id/example_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/gmarketsansttfmedium"
                        android:layout_marginLeft="59dp"
                        app:layout_constraintTop_toBottomOf="@+id/userinfo"
                        android:text="@string/example_email"
                        android:textSize="15dp"
                        ></TextView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/bar2"
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:background="@drawable/bar"
                        android:backgroundTint="#F6F7F8"
                        android:layout_marginTop="15dp"
                        app:layout_constraintTop_toBottomOf="@+id/example_email">
                    </androidx.cardview.widget.CardView>
                    <ImageView
                        android:id="@+id/info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:background="@drawable/info"
                        app:layout_constraintTop_toBottomOf="@+id/example_email"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginTop="30dp"
                        android:layout_marginLeft="18dp"/>
                    <TextView
                        android:id="@+id/example_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/example_userinfo"
                        android:fontFamily="@font/gmarketsansttfmedium"
                        android:textSize="15dp"
                        app:layout_constraintTop_toBottomOf="@+id/example_email"
                        android:textColor="@color/black"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginTop="40dp"
                        android:layout_marginLeft="61dp"
                        />
                    <androidx.cardview.widget.CardView
                        android:id="@+id/bar3"
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:background="@drawable/bar"
                        android:backgroundTint="#F6F7F8"
                        android:layout_marginTop="15dp"
                        app:layout_constraintTop_toBottomOf="@+id/example_info">
                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>